add loading page

--- a/MHUDApp/newapp/templates/LoginPage.html
+++ b/MHUDApp/newapp/templates/LoginPage.html
@@ -33,7 +33,7 @@
                 <button class="btn">Login</button>
 
                 <div class="register-link">
-                    <p>Dont have an account? <a href="#">Register</a></p>
+                    <p>Dont have an account? <a href="http://127.0.0.1:8000/newapp/register">Register</a></p>
                 </div>
             </form>
         </div>
