--- a/MHUDApp/newapp/templates/RegisterPage.html
+++ b/MHUDApp/newapp/templates/RegisterPage.html
@@ -40,7 +40,7 @@
                 <button class="btn2">Register</button>
     
                 <div class="login-link">
-                    <p>Already have an account? <a href="Login.html">Login</a></p>
+                    <p>Already have an account? <a href="http://127.0.0.1:8000/newapp/login">Login</a></p>
                 </div>
             </form>
         </div>
