--- a/MHUDApp/newapp/templates/LoginPage.html
+++ b/MHUDApp/newapp/templates/LoginPage.html
@@ -36,6 +36,12 @@
                     <p>Dont have an account? <a href="http://127.0.0.1:8000/newapp/register">Register</a></p>
                 </div>
             </form>
+            <!-- Thông báo -->
+            {% for message in messages %}
+                <div style="width: 100%; height: 30px; background-color: red; text-align: center;">
+                    {{ message }}
+                </div>
+            {% endfor %}
         </div>
     </div>
 
