--- a/MHUDApp/newapp/templates/UserPage.html
+++ b/MHUDApp/newapp/templates/UserPage.html
@@ -26,11 +26,11 @@
             <div class="profile tabShow">
                 <h1>User Info</h1>
                 <h2>Full name</h2>
-                <input type="text" class="input" value="Duc Minh">
+                <input type="text" class="input" value="">
                 <h2>Birthday</h2>
-                <input type="text" class="input" value="28-2-2003">
+                <input type="text" class="input" value="">
                 <h2>Gender</h2>
-                <input type="text" class="input" value="Male">
+                <input type="text" class="input" value="">
                 <h2>Email</h2>
                 <input type="text" class="input" value="macleducminh1@gmail.com">
 
