--- a/MHUDApp/newapp/templates/RegisterPage.html
+++ b/MHUDApp/newapp/templates/RegisterPage.html
@@ -34,11 +34,12 @@
                 </div>
 
                 <div class="remember-forgot2">
-                    <label> <input type="checkbox"> I agree to the terms and conditions</label>
+                    <label> <input type="radio" name="user_type" value="user"> User</label>
+                    <label> <input type="radio" name="user_type" value="admin"> Admin</label>
                 </div>
     
                 <!-- <button class="btn2" onclick="window.location.href='Login.html'">Register</button> -->
-                <button class="btn2">Register</button>
+                <button class="btn2" onclick="getSelectedValue()">Register</button>
     
                 <div class="login-link">
                     <p>Already have an account? <a href="http://127.0.0.1:8000/newapp/login">Login</a></p>
@@ -52,7 +53,12 @@
             {% endfor %}
         </div>
     </div>
-
+    <script>
+        function getSelectedValue() {
+            var selectedValue = document.querySelector('input[name="user_type"]:checked').value;
+            alert("Selected value: " + selectedValue);
+        }
+    </script>
     
 
 </body>
