--- a/MHUDApp/newapp/templates/LoadingPage.html
+++ b/MHUDApp/newapp/templates/LoadingPage.html
@@ -27,33 +27,37 @@
             setTimeout(function() {
                 document.getElementById("myButton").style.display = "block";
             }, 2000); // 2000 milliseconds = 2 seconds
+            console.log("start 1");
         }
     </script>
-    <!-- <script>
+    <script>
         // Lấy tham chiếu đến button
         const redirectButton = document.getElementById('myButton');
         
         // Thêm sự kiện click cho button
         redirectButton.addEventListener('click', function() {
             // Chuyển đến trang khác
-            window.location.href = 'http://127.0.0.1:8000/newapp/user/'; // Thay đổi URL tại đây
+            window.location.href = 'http://127.0.0.1:8000/newapp/user/'; 
         });
-    </script> -->
-     <script>
+    </script>
+    <!-- <script>
         // Đọc dữ liệu từ file JSON
-        fetch('token.json')  // Đường dẫn đến file JSON
+        console.log('start');
+        fetch('http://localhost:3000/user_types') 
             .then(response => response.json())
             .then(data => {
-                const userTypes = data.user_types; // Giả sử user_types là một trường trong file JSON
+                const userTypes = data; // Giả sử user_types là một trường trong file JSON
                 const redirectButton = document.getElementById('myButton');
+                console.log(userTypes);
 
                 // Thêm sự kiện click cho button
                 redirectButton.addEventListener('click', function() {
+                    console.log('start');
                     // Kiểm tra giá trị của userTypes và chuyển hướng tương ứng
                     if (userTypes === 'user') {
-                        window.location.href = 'http://127.0.0.1:8000/newapp/user/'; // URL của trang user
+                        window.location.href = 'http://127.0.0.1:8000/newapp/user/'; 
                     } else if (userTypes === 'admin') {
-                        window.location.href = 'http://127.0.0.1:8000/newapp/admin/'; // URL của trang admin
+                        window.location.href = 'http://127.0.0.1:8000/newapp/admin/'; 
                     } else {
                         // Xử lý khi userTypes không phải là 'user' hoặc 'admin'
                         console.log('Invalid user type');
@@ -63,6 +67,6 @@
             .catch(error => {
                 console.error('Error fetching JSON:', error);
             });
-    </script>
+    </script> -->
 </body>
 </html>
