--- a/MHUDApp/newapp/templates/AdminPage.html
+++ b/MHUDApp/newapp/templates/AdminPage.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script>
         const tabBtn = document.querySelectorAll(".tab");
         const tab = document.querySelectorAll(".tabShow");
